@@ -1,3 +1,12 @@
+2002-11-25  David Hyatt  <hyatt@apple.com>
+
+	Fix for the DHTML on hrweb.  With these changes it works
+	except for some odd vertical spacing issues.
+	
+        * khtml/rendering/render_flow.cpp:
+        (RenderFlow::addChildToFlow):
+        (RenderFlow::makeChildrenNonInline):
+
 2002-11-25  Richard Williamson   <rjw@apple.com>
 
         Tweaked some debugging info.
